--- a/Phoenix/Phoenix.vcxproj.filters
+++ b/Phoenix/Phoenix.vcxproj.filters
@@ -1360,6 +1360,8 @@
     <ClInclude Include="src\Phoenix\Renderer\Buffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Phoenix\Renderer\Renderer.h" />
+    <ClInclude Include="src\Phoenix\Renderer\VertexArray.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Phoenix\Application.cpp">
@@ -1396,5 +1398,7 @@
     <ClCompile Include="src\Phoenix\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Phoenix\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
   </ItemGroup>
 </Project>
