--- a/Phoenix/Phoenix.vcxproj
+++ b/Phoenix/Phoenix.vcxproj
@@ -577,7 +577,9 @@
     <ClInclude Include="src\Phoenix\LayerStack.h" />
     <ClInclude Include="src\Phoenix\Log.h" />
     <ClInclude Include="src\Phoenix\Renderer\Buffer.h" />
+    <ClInclude Include="src\Phoenix\Renderer\Camera.h" />
     <ClInclude Include="src\Phoenix\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Phoenix\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Phoenix\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Phoenix\Renderer\Renderer.h" />
     <ClInclude Include="src\Phoenix\Renderer\RendererAPI.h" />
@@ -600,6 +602,7 @@
     <ClCompile Include="src\Phoenix\LayerStack.cpp" />
     <ClCompile Include="src\Phoenix\Log.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Phoenix\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\RendererAPI.cpp" />
