--- a/Phoenix/Phoenix.vcxproj.filters
+++ b/Phoenix/Phoenix.vcxproj.filters
@@ -1365,6 +1365,8 @@
     <ClInclude Include="src\Phoenix\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Phoenix\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Phoenix\Renderer\Camera.h" />
+    <ClInclude Include="src\Phoenix\Renderer\OrthographicCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Phoenix\Application.cpp">
@@ -1406,5 +1408,6 @@
     <ClCompile Include="src\Phoenix\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Phoenix\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\Phoenix\Renderer\OrthographicCamera.cpp" />
   </ItemGroup>
 </Project>
